CompareQuestions/force-app/main/default/objects/avnio__ProjectQuestion__c/fields/Matching_Project_Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Matching_Project_Question_ID__c</fullName>
    <label>Matching Project Question ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>