CompareQuestions/force-app/main/default/objects/avnio__ProjectQuestion__c/fields/NSE__c.field-meta.xml
<CustomField>
    <fullName>NSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NSE</label>
    <type>Checkbox</type>
</CustomField>