CompareQuestions/force-app/main/default/objects/avnio__ProjectQuestion__c/fields/Retrieve_From_Previous_Project__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_From_Previous_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrieve From Previous Project</label>
    <type>Checkbox</type>
</CustomField>